[VERSION] 0.3500.0 - compatible with Spring 3.5.x