@@ -1,5 +1,6 @@
 package net.seesharpsoft.spring.multipart.boot.demo.service;
 
+import net.seesharpsoft.spring.multipart.boot.demo.entity.Person;
 import net.seesharpsoft.spring.multipart.boot.demo.repository.PersonRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.GrantedAuthority;
@@ -11,8 +12,9 @@ import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
-@Service
+
 public class FakeUserDetailsService implements UserDetailsService {
     @Autowired
     private PersonRepository personRepository;
@@ -20,10 +22,10 @@ public class FakeUserDetailsService implements UserDetailsService {
     @Override
     public UserDetails loadUserByUsername(String username) throws
             UsernameNotFoundException {
-//        Person person = personRepository.findByFirstNameEquals(username);
-//        if (person == null) {
-//            throw new UsernameNotFoundException("Username " + username + " not found");
-//        }
+        Person person = personRepository.findByFirstNameEquals(username);
+        if (person == null) {
+            throw new UsernameNotFoundException("Username " + username + " not found");
+        }
         return new User(username, "password", getGrantedAuthorities(username));
     }
 
@@ -33,7 +35,7 @@ public class FakeUserDetailsService implements UserDetailsService {
         if (username.equals("John")) {
             authorities = Arrays.asList(() -> "ROLE_ADMIN", () -> "ROLE_BASIC");
         } else {
-            authorities = Arrays.asList(() -> "ROLE_BASIC");
+            authorities = List.of(() -> "ROLE_BASIC");
         }
         return authorities;
     }
